Editor: Fix flickering on color hyperlinks and show the preview next to the link rather than over it - fixes #1716
(integrated from master branch change 9.2.1-1841-g9d065ca by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -19,7 +19,17 @@ scintilla[anonid="scintilla"] > panel[anonid="autocompletepopup"]
         -moz-user-focus: normal;
     }
 }
-description, tab, textbox, menulist, menuitem, menu, treecol, button, toolbarbutton,
+
+#colorpicker_swatch_popup {
+    background: @border;
+    padding: 1px;
+}
+
+#colorpicker_swatch {
+    width: 100px;
+    height: 50px;
+    border-radius: 1px;
+}description, tab, textbox, menulist, menuitem, menu, treecol, button, toolbarbutton,
 checkbox, radio, tabpanels, listitem, richlistitem, listheader
 {
     color: @foreground; 
